--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -39,25 +39,27 @@
 {% endif %}
 </div>
 <script>
-  function  openchat_new(jobnum){
-    openJesongChatByCus(1,jobnum)
-  }
-  $('.expand2').on('click','.expand',function(){
-    var text = $(this).data('text');
-    $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
-  });
-  $('.expand2').on('click','.expand3',function(){
-    var tex = $(this).parent('.expand2').data('tex');
-    /* $('.expand1').hide();*/
-    $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
-  });
-  $('.advisor-img').on('click',function(){
-      if($(".tan_tupian").css("display")=="block"){
-        $(".tan_tupian").css("display","none");
-      }else{
-        $(".tan_tupian").css("display","block");
-      }
-  })
+ $(function(){
+   function  openchat_new(jobnum){
+     openJesongChatByCus(1,jobnum)
+   }
+   $('.expand2').on('click','.expand',function(){
+     var text = $(this).data('text');
+     $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
+   });
+   $('.expand2').on('click','.expand3',function(){
+     var tex = $(this).parent('.expand2').data('tex');
+     /* $('.expand1').hide();*/
+     $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
+   });
+   $('.advisor-img').on('click',function(){
+     if($(".tan_tupian").css("display")=="block"){
+       $(".tan_tupian").css("display","none");
+     }else{
+       $(".tan_tupian").css("display","block");
+     }
+   })
+ })
 </script>
 {% endmacro %}
 <!--离职顾问-->
@@ -69,7 +71,7 @@
   </ul>
   <dl>
     <!--<dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 1,advisor.version)}}" alt=""></a></dt>-->
-    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 1,advisor.version)}}')"><a target="_blank" href="{{helper.urlgen( advisor.uid)}}"></a></dt>
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advi,advisor.version)}}');background-position: 0 0;cursor: pointer;"></dt>
     <dd>
       <p class="advisor-name">金吉列</p>
     </dd>
@@ -78,14 +80,14 @@
     <a href="javascript:void(0);" style="font-size: 14px;color: #fff;cursor: default;">立即咨询</a>
   </div>
 </div>#}
-<div class="community-advisor dui-box-shadow">
+<div class="community-advisor dui-box-shadow" style="position:relative;">
   <ul style="height: 40px">
     <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
     <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
     <!--<dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}" alt="{{advisor.realname}}" title="{{advisor.realname}}"></a></dt>-->
-    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advi,advisor.version)}}');background-position: 0 0;"><a target="_blank" href="{{helper.urlgen( advisor.uid)}}"></a></dt>
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advi,advisor.version)}}');background-position: 0 0;cursor: pointer;"></dt>
     <dd>
       <p class="advisor-name" >{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
@@ -98,7 +100,11 @@
     </dd>
   </dl>
   <div class="advisor-intro">
-    <p>{{ advisor.introduce | ellipsis(80) }}</p>
+    {% if advisor.introduce.length > 74 %}
+    <p class="expand2" data-tex="{{ advisor.introduce | ellipsis(74) }}">{{ advisor.introduce | ellipsis(74) }}<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span></p>
+    {% else %}
+    <p class="expand1">{{ advisor.introduce }}</p>
+    {% endif %}
   </div>
   <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}">
     <a {% if login_info.uid !== advisor.uid %} onclick="openchat_new('{{ advisor.new_job_number}}')"{% endif %}class="advisor-zixun"  rel="nofollow">立即咨询</a>
@@ -108,11 +114,32 @@
     <span class="advisor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">关注</span>
     {% endif %}
   </div>
+  {% if advisor.header_avatar_big %}
+  <div class="tan_tupian" style="width: 220px;height: 276px;position: absolute;top: 0;left: 236px;z-index: 999;display: none"><img src="{{ advisor.header_avatar_big }}" alt=""></div>
+  {% endif %}
 </div>
 <script>
-  function  openchat_new(jobnum){
-    openJesongChatByCus(1,jobnum)
-  }
+  $(function(){
+    function  openchat_new(jobnum){
+      openJesongChatByCus(1,jobnum)
+    }
+    $('.expand2').on('click','.expand',function(){
+      var text = $(this).data('text');
+      $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
+    });
+    $('.expand2').on('click','.expand3',function(){
+      var tex = $(this).parent('.expand2').data('tex');
+      /* $('.expand1').hide();*/
+      $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
+    });
+    $('.advisor-img').on('click',function(){
+      if($(".tan_tupian").css("display")=="block"){
+        $(".tan_tupian").css("display","none");
+      }else{
+        $(".tan_tupian").css("display","block");
+      }
+    })
+  })
 </script>
 {% endmacro %}
 <!--参赞-->
@@ -180,24 +207,19 @@
   </div>
 </div>
 <script>
-  function  openchat_new(jobnum){
-    openJesongChatByCus(1,jobnum)
-  }
-  $('.expand2').on('click','.expand',function(){
-    var text = $(this).data('text');
-    $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
-  });
-  $('.expand2').on('click','.expand3',function(){
-    var tex = $(this).parent('.expand2').data('tex');
-    /* $('.expand1').hide();*/
-    $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
-  });
-  $('.advisor-img').on('click',function(){
-    if($(".tan_tupian").css("display")=="block"){
-      $(".tan_tupian").css("display","none");
-    }else{
-      $(".tan_tupian").css("display","block");
+  $(function(){
+    function  openchat_new(jobnum){
+      openJesongChatByCus(1,jobnum)
     }
+    $('.expand2').on('click','.expand',function(){
+      var text = $(this).data('text');
+      $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
+    });
+    $('.expand2').on('click','.expand3',function(){
+      var tex = $(this).parent('.expand2').data('tex');
+      /* $('.expand1').hide();*/
+      $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
+    });
   })
 </script>
 {% endmacro %}
