修改编辑个人资料 审核人：海亮

--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -201,9 +201,10 @@
       }
     });
     var geren = $('#gerenjieshao').data('geren');
-    geren = geren.substring(0, 150);
+    console.log('geren',geren)
+    // geren = geren.substring(0, 150);
     $('#gerenjieshao').html(geren);
-    $("#word-num").html(150-geren.length);
+    $("#word-num").html(150-$.trim(geren).length);
   });
   function baocunSubmit () {
     if ($('#gerenjieshao').val() == '') {
