--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -1,5 +1,5 @@
 <div class="top" style="position:relative;z-index: 1002;" data-uinfo="{{index_userinfo.unread_num}}">
-    <div class="dui-layout-lg top-con clearfix" style="position: relative;">
+    <div class="dui-layout-lg top-con clearfix" style="position: relative;width: 1200px;">
         <div class="top-con-left" style="display: inline-block;width: 50%;">
             <img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">
             <span style="font-size: 12px;color: #666;">400-010-8000</span>
