--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -260,6 +260,7 @@
     </div>
   </div>
   <!-- <script src="{{helper.cdnhost}}/assets/js/top.js"></script> -->
+  <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
     $(document).ready(function () {
@@ -611,7 +612,7 @@ function loginS_pass () {
       type:'POST',
       data:{
         phone: $('#newEmail_pass').val(),
-        password: $('#password').val(),
+        password: hex_sha1($('#password').val()),
       },
       dataType:'json',
       success:function(msg){
