修改密码登录 审核人：海亮

--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -617,7 +617,7 @@
             //console.log('str', str);
             //var strs = str.split("=");
             //console.log('strs', strs[1]);
-              window.location= url;
+              window.location= '/loginUser?h='+url;
             } else {
               window.location = '/loginUser';
             }
