修改密码登录 审核人：海亮

--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -178,9 +178,9 @@
                   <span class="login_error" id="login_e_phone_p" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_p">请输入手机号</em></span>
                 </div>
                 <div class="form-group inputtext_isr" style="position: relative;height: 28px;margin-top: 20px">
-                  <input type="password" style="border-radius: inherit;" class="form-control" placeholder="请输入密码" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
+                  <input type="password" style="border-radius: inherit;" class="form-control" placeholder="请输入8-16位数字+字母组成" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
                   <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 13px" class="iconfont">&#xe606;</i>
-                  <span class="login_error" id="login_e_phone_pp" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_pp">请输入6-12位数字+字母组成</em></span>
+                  <span class="login_error" id="login_e_phone_pp" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_pp">请输入8-16位数字+字母组成</em></span>
                 </div>
 
                   <div class="login_check clearfix" style="margin-top: 20px">
@@ -594,9 +594,9 @@ function loginS_pass () {
     $('#login_e_phone_pp').css('display','block');
     return
   }
-  if (!/^[a-zA-Z0-9]{6,12}$/.test($("#password").val())) {
+  if (!/^[a-zA-Z0-9]{8,16}$/.test($("#password").val())) {
     $('#login_e_phone_pp').css('display','block');
-    $('#login_error_text_phone_pp').html('请输入6-12位数字+字母组成');
+    $('#login_error_text_phone_pp').html('请输入8-16位数字+字母组成');
     return
   } else {
     $('#login_e_phone_pp').css('display','none');
@@ -605,7 +605,7 @@ function loginS_pass () {
     layer.msg('请同意注册协议');
     return
   }
-  if ($('#newEmail_pass').val() !== '' && /^1\d{10}$/.test($("#newEmail_pass").val()) && $('#password').val() !== '' && /^[a-zA-Z0-9]{6,12}$/.test($("#password").val())) {
+  if ($('#newEmail_pass').val() !== '' && /^1\d{10}$/.test($("#newEmail_pass").val()) && $('#password').val() !== '' && /^[a-zA-Z0-9]{8,16}$/.test($("#password").val())) {
     console.log('ajax');
     $.ajax({
       url: '/user_login',
