数据中心 待审核

--- a/views/widget2/side_menu/adviser_side_menu.html
+++ b/views/widget2/side_menu/adviser_side_menu.html
@@ -41,6 +41,10 @@ set side_ul = [
 "li_url": "advisor_center/revcomment"
 },
 {
+"li_name": "数据中心",
+"li_url": "advisor_center/data_center"
+},
+{
 "li_name": "发布我的文章",
 "li_url": "advisor_center/postarticle"
 },
@@ -76,6 +80,8 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
+                        {% elif  mItem.li_name == '数据中心' %}
+                        &#xe63f;
                         {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe62e;
                         {% elif  mItem.li_name == '上传我的二维码' %}
@@ -117,6 +123,8 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
+                        {% elif  mItem.li_name == '数据中心' %}
+                        &#xe63f;
                         {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe768;
                         {% elif  mItem.li_name == '上传我的二维码' %}
