活动页  评审：淑琴

--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -193,7 +193,7 @@
 
     </div>
     <div class="new-activity-title" style="margin-top: 20px;">
-      其他城市讲座信息
+      历届讲座回顾
     </div>
     <div class="new-activity-content">
       <div class="clearfix">
