修改登录样式 审核人：海亮

--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -161,7 +161,7 @@
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left">
         <div class="login_nei_top clearfix">
           <div class="login_nei_title active">账号密码登录</div>
-          <div class="login_nei_title">验证码登录</div>
+          <div class="login_nei_title" style="border-right: none;">验证码登录</div>
         </div>
         {#<h3 class="login_nei_title" style="font-weight: 400">验证码登录<!--<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a>--></h3>
         <!--<div class=" clearfix" id="guwen_login" style="margin-left: -15px;font-size: 18px;">
