修改css多余的冒号 评审人王淑琴

--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -137,7 +137,7 @@
 .art-type-sel{
   margin-right:60px;
   vertical-align:middle;
-  cursor: pointer;"
+  cursor: pointer;
 }
 .art-type-i{
   display: inline-block;
