--- a/views/widget2/side_menu/adviser_side_menu.html
+++ b/views/widget2/side_menu/adviser_side_menu.html
@@ -41,7 +41,7 @@ set side_ul = [
 "li_url": "advisor_center/revcomment"
 },
 {
-"li_name": "数据中心",
+"li_name": "用户热搜榜",
 "li_url": "advisor_center/data_center"
 },
 {
@@ -80,7 +80,7 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
-                        {% elif  mItem.li_name == '数据中心' %}
+                        {% elif  mItem.li_name == '用户热搜榜' %}
                         &#xe63f;
                         {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe62e;
@@ -123,7 +123,7 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
-                        {% elif  mItem.li_name == '数据中心' %}
+                        {% elif  mItem.li_name == '用户热搜榜' %}
                         &#xe63f;
                         {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe768;
