--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -239,7 +239,7 @@
   </div>#}
 
   <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png);
-    background-repeat: no-repeat;background-size: cover;">{# #}
+    background-repeat: no-repeat;background-size: cover;background-position-x: -50px;">{# #}
       {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
   </div>
 
