--- a/views/login/login.html
+++ b/views/login/login.html
@@ -80,7 +80,7 @@
   </div>
 
   <div class="login_overseas clearfix">
-    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;">{##}
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;background-position-x: -50px;">{##}
       {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
     </div>
     
