--- a/views/center_main.html
+++ b/views/center_main.html
@@ -43,9 +43,59 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
         margin-top: -33px
     }
+    /*遮罩*/
+    .zhezhao {
+	        width: 100%;
+            height: 100%;
+            min-width: 1180px;
+	        background: #000000;
+	        opacity: 0.6;
+	        position: fixed;
+	        z-index: 1003;
+            cursor: pointer;
+        }
+        .zhezhaof{
+            width: 286px;
+            height: 60px;
+            background: #fff;
+            opacity: 1;
+            position: absolute;
+            z-index: 1005;
+            top: 70%;
+        }
+        .zhezhao .img1{
+            position: absolute;
+            top: 60%;
+            left: 24%;
+        }
+        .zhezhao .img2{
+            position: absolute;
+            top: 25%;
+            left: 40%;
+        }
+        .zhezhao .img3{
+            position: absolute;
+            top: 38%;
+            left: 40%;
+        }
+        .zhezhao .img4{
+            position: absolute;
+            top: 65%;
+            left: 48%;
+        }
 </style>
 </head>
 <body style="background: #f5f5f5">
+        <div class="zhezhao" id="zhezhaoy" style="display: none;">
+                <div style="width:1180px;height: 100%;margin: 0 auto;position: relative;">
+                    <div class="zhezhaof"></div>
+                    <img class="img1" src="{{helper.cdnhost}}/assets/img/zhezhao.png" alt="">
+                    <img class="img2" src="{{helper.cdnhost}}/assets/img/zhezhao1.png" alt="">
+                    <img class="img3" src="{{helper.cdnhost}}/assets/img/zhezhao2.png" alt="">
+                    <img class="img4" src="{{helper.cdnhost}}/assets/img/zhezhao3.png" alt="">
+                </div>
+                
+            </div>
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
@@ -214,6 +264,21 @@
         if(cookie('login_ss') != undefined){
             login_ss = JSON.parse(cookie('login_ss'));
         }
+        if (!cookie('yhrs')) {
+            console.log('1111')
+            $('#zhezhaoy').show();
+            var h = document.documentElement.clientHeight || document.body.clientHeight;
+            h = h*0.7
+            console.log('h',h)
+            var $scrolltop = $('#yhrs_1').offset().top;
+            $('html,body').animate({//$('html,body')兼容问题body属于chrome
+              scrollTop:$scrolltop-h
+            })
+        }
+        $('#zhezhaoy').click(function () {
+            cookie('yhrs', '1', {path: "/", domain: js_api_config.domain, expires: 36500});
+            $(this).hide();
+        });
         $('.banner-box-left .slider').xSlider({
             //轮播图配置
 //          autoplay : 500,
