--- a/views/widget2/side_menu/adviser_side_menu.html
+++ b/views/widget2/side_menu/adviser_side_menu.html
@@ -110,7 +110,7 @@ set side_ul = [
             {% endif %}
         </li>
         {% else %}
-        <li>
+        <li {% if  mItem.li_name == '用户热搜榜' %} id="yhrs_1" {% endif %}>
             <div class="title">
                 {% if mItem.li_name == '我的主页' %}
                 <a  class="opc" href="{{helper.urlgen(mItem.li_url)}}">
