--- a/views/country_list.html
+++ b/views/country_list.html
@@ -246,6 +246,30 @@
       },
       {
       "type": "留学案例"
+      },
+      {
+      "type": "院校资讯"
+      },
+      {
+      "type": "留学方案"
+      },
+      {
+      "type": "背景提升"
+      },
+      {
+      "type": "海外生活"
+      },
+      {
+      "type": "备考资讯"
+      },
+      {
+      "type": "文书准备"
+      },
+      {
+      "type": "难点解析"
+      },
+      {
+      "type": "省钱攻略"
       }
       ]
       %}
