--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 .lxContaniner{margin-top:30px;width:1200px;overflow: hidden;margin-left: auto;margin-right: auto;}
-.lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;overflow: hidden;}
+.lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;}
 .lx-head h1{float:left;margin-right:80px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
 .lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:12px;cursor:pointer}
@@ -20,7 +20,7 @@
 :root .lx-groupitems .gw-people a{background-position:0 0\0;}
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
-.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(http://cdn6.jjl.cn/assets/img/1v.png) no-repeat;background-position:right center}
+.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(/assets/img/1v.png) no-repeat;background-position:right center}
 .gw-legend{float:right;margin-top:18px;padding:2px 8px;-webkit-border-radius:8px;border-radius:8px;background:rgba(193, 50, 50,.06);color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 .gw-people .bg-peopel,.gw-people a{float:left;height: 51px; width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
@@ -29,18 +29,46 @@
 #guItems li{ color: #c13232;}
 .lx-head a{ font-size: 12px;color: #c13232;float: left;margin-top: 5px}
 .lx-head .enter{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
-.lx-hovertarg{ float: left;font-size: 0; }
+.lx-hovertarg{ float: left;font-size: 0; position: relative; }
 .lx-hovertarg li{ display: inline-block; margin-right: 14px; *float: left}
 .lx-hovertarg li a{font-size: 12px;color: #999;	transition: .2s ease;-webkit-transition: .2s ease;}
-.lx-hovertarg li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
+.lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
+.lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {
+	display: inline-block;height: 12px;width: 12px;
+	background: url(/assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;
+}
+.lx-hovertarg .slide-toggle-icon{background: url(/assets/img/icon_toggle.png) no-repeat;}
+.slide-menu{ position: absolute; width: 795px; min-height: 43px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 5;padding-bottom: 12px;display:none;}
+.slide-menu li{ margin-left: 25px; margin-right: 25px;margin-top: 12px;}
+.slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
 #guItems .atities-top{position:absolute;top:65px;}
 .atities{color: #333;font-size: 16px;text-indent: 20px;display: block;position: absolute;top: 57px;}
-.atities:link{ color: #333;}
-.atities:visited{ color: #999;}
-.atities:hover{ color: #c13232;}
+.atities:link{color: #333;}
+.atities:visited{color: #999;}
+.atities:hover{color: #c13232;}
 </style>
 {% for floor in shouye %} {#国家#}
 {% set ad_seat_index = loop.index + 10 %}
+{% set targlist = [
+	{ "type":"专业解析" },
+	{ "type":"申请规划" },
+	{ "type":"留学费用" },
+	{ "type":"留学条件" },
+	{ "type":"大学排名" },
+	{ "type":"行前指导" },
+	{ "type":"就业指导" },
+	{ "type":"签证指导" },
+	{ "type":"留学案例" },
+	{ "type":"院校资讯" },
+	{ "type":"留学方案" },
+	{ "type":"背景提升" },
+	{ "type":"海外生活" },
+	{ "type":"备考资讯" },
+	{ "type":"文书准备" },
+	{ "type":"难点解析" },
+	{ "type":"省钱攻略" }
+	]
+%}
 <div class="lxContaniner" style="overflow:hidden" id="country{{floor.country_id}}">
 	<div class="lx-head">
 		<h1 style="font-weight: normal">{{floor.country_name}}留学</h1>
@@ -54,15 +82,19 @@
 			{% endfor %}
 		</ul>
 		<ul class="lx-hovertarg">
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=专业解析')}}" target="_blank">专业解析</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=申请规划')}}" target="_blank">申请规划</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=留学费用')}}" target="_blank">留学费用</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=留学条件')}}" target="_blank">留学条件</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=大学排名')}}" target="_blank">大学排名</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=行前指导')}}" target="_blank">行前指导</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=就业指导')}}" target="_blank">就业指导</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=签证指导')}}" target="_blank">签证指导</a></li>
-			<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=留学案例')}}" target="_blank">留学案例</a></li>
+			{% for targitems in targlist%}
+				{% if loop.index <= 9 %}
+					<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
+				{% endif %}
+			{% endfor %}
+			<ul class="slide-menu">
+				{% for targitems in targlist %}
+				 	{% if loop.index > 9%}
+						<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+			<i class="slide-icon"></i>
 		</ul>
 		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter">进入专区&nbsp;&nbsp;></a>
 	</div>
@@ -117,6 +149,26 @@
 		}
 		$(this).addClass('active').siblings().removeClass('active');
 	})
+	//折叠菜单
+	$(".lx-hovertarg .slide-icon").on('click',function () {
+
+		if(!$(this).hasClass('slide-toggle-icon')){
+			$(this).removeClass('slide-icon')
+			$(this).addClass('slide-toggle-icon')
+			$(this).prev().slideDown(90)
+		}else{
+			$(this).removeClass('slide-toggle-icon')
+			$(this).addClass('slide-icon')
+			$(this).prev().slideUp(90)
+		}
+	})
+
+	$(".slide-menu a").click(function () {
+		$(this).parent().parent().slideUp(90)
+		$(".lx-hovertarg i").removeClass('slide-toggle-icon')
+		$(".lx-hovertarg i").addClass('slide-icon')
+	})
+
   })
 </script>
 
