--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -20,7 +20,7 @@
 :root .lx-groupitems .gw-people a{background-position:0 0\0;}
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
-.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(http://cdn6.jjl.cn/assets/img/1v.png) no-repeat;background-position:right center}
+.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
 .gw-legend{float:right;margin-top:18px;padding:2px 8px;-webkit-border-radius:8px;border-radius:8px;background:rgba(193, 50, 50,.06);color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 .gw-people .bg-peopel,.gw-people a{float:left;height: 51px; width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
@@ -35,9 +35,9 @@
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
 .lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {
 	display: inline-block;height: 12px;width: 12px;
-	background: url(/assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;
+	background: url(../assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;
 }
-.lx-hovertarg .slide-toggle-icon{background: url(/assets/img/icon_toggle.png) no-repeat;}
+.lx-hovertarg .slide-toggle-icon{background: url(../assets/img/icon_toggle.png) no-repeat;}
 .slide-menu{ position: absolute; width: 795px; min-height: 43px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 5;padding-bottom: 12px;display:none;}
 .slide-menu li{ margin-left: 25px; margin-right: 25px;margin-top: 12px;}
 .slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
