--- a/views/release_article.html
+++ b/views/release_article.html
@@ -125,46 +125,38 @@
                 <span>*</span> 选择推荐标签：
               </label>
               <div class="recommend-tag" >
-                <span class="recommend-sel" data-str="专业解析" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>专业解析</i>
-                </span>
-                <span class="recommend-sel" data-str="申请规划" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>申请规划</i>
-                </span>
-                <span class="recommend-sel" data-str="留学费用" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>留学费用</i>
-                </span>
-                <span class="recommend-sel" data-str="留学条件" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>留学条件</i>
-                </span>
-                <span class="recommend-sel" data-str="大学排名" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>大学排名</i>
-                </span>
-                <span class="recommend-sel" data-str="行前指导" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>行前指导</i>
-                </span>
-                <span class="recommend-sel" data-str="就业指导" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>就业指导</i>
-                </span>
-                <span class="recommend-sel" data-str="签证指导" >
-                  <i class="level-sel-i iconfont"></i>
-                  <i>签证指导</i>
-                </span>
-                <span class="recommend-sel" style="display: block;" data-str="留学案例" >
+                {% set recommendList = [
+                {'name':'专业解析','val':'专业解析'},
+                {'name':'申请规划','val':'申请规划'},
+                {'name':'留学费用','val':'留学费用'},
+                {'name':'留学条件','val':'留学条件'},
+                {'name':'大学排名','val':'大学排名'},
+                {'name':'行前指导','val':'行前指导'},
+                {'name':'就业指导','val':'就业指导'},
+                {'name':'签证指导','val':'签证指导'},
+                {'name':'院校资讯','val':'院校资讯'},
+                {'name':'留学方案','val':'留学方案'},
+                {'name':'背景提升','val':'背景提升'},
+                {'name':'海外生活','val':'海外生活'},
+                {'name':'备考资讯','val':'备考资讯'},
+                {'name':'文书准备','val':'文书准备'},
+                {'name':'难点解析','val':'难点解析'},
+                {'name':'省钱攻略','val':'省钱攻略'}
+                ]  %}
+                {% for item in recommendList%}
+                  <span class="recommend-sel" data-str="{{item.name}}" >
+                    <i class="level-sel-i iconfont"></i>
+                    <i>{{item.name}}</i>
+                  </span>
+                {% endfor %}
+                <span class="recommend-sel" style="display: block;" data-str="留学案例" id="recommend-sel-case" >
                   <i class="level-sel-i iconfont"></i>
                   <i>留学案例</i>
                   <i class="numTip" style="margin-left:30px;">注：选中【留学案例】标签即发布至顾问个人主页-案例中
                   </i>
                 </span>
                 <div  style="display: block;">
-                  <span class="recommend-sel" style="margin-right: 0px;" data-str="" >
+                  <span class="recommend-sel" style="margin-right: 0px;" data-str="" id="recommend-sel-custom">
                     <i class="level-sel-i iconfont"></i>
                     <i>自定义标签</i>
                   </span>
@@ -388,6 +380,25 @@
         layer.msg(info)
       }
       editor.create();
+      var taglist=[
+            {'name':'专业解析','val':'专业解析'},
+            {'name':'申请规划','val':'申请规划'},
+            {'name':'留学费用','val':'留学费用'},
+            {'name':'留学条件','val':'留学条件'},
+            {'name':'大学排名','val':'大学排名'},
+            {'name':'行前指导','val':'行前指导'},
+            {'name':'就业指导','val':'就业指导'},
+            {'name':'签证指导','val':'签证指导'},
+            {'name':'院校资讯','val':'院校资讯'},
+            {'name':'留学方案','val':'留学方案'},
+            {'name':'背景提升','val':'背景提升'},
+            {'name':'海外生活','val':'海外生活'},
+            {'name':'备考资讯','val':'备考资讯'},
+            {'name':'文书准备','val':'文书准备'},
+            {'name':'难点解析','val':'难点解析'},
+            {'name':'省钱攻略','val':'省钱攻略'},
+            {'name':'留学案例','val':'留学案例'}
+        ];
       $('#sureBtn').on('click',surePublish); //发布文章
       $("#save-draft").on("click",savePublish); //保存草稿箱
       function surePublish(){
@@ -428,7 +439,7 @@
                 tagStr+=$('#recommend-input').val()+',';
               }
             });
-            if($('.recommend-sel').eq(8).attr('checked')){
+            if($('#recommend-sel-case').attr('checked')){
               artType = 1;
             }else{
               artType = 2;
@@ -439,22 +450,32 @@
             }
             newTagStr =tagStr.substring(0,tagStr.length-1);
             // console.log(tagStr)
-            // console.log(newTagStr)
-            if($('.recommend-sel').eq(9).attr('checked')){
+            // console.log(newTagStr)]
+            if($('#recommend-sel-custom').attr('checked')){
               //选中自定义标签
               if($('#recommend-input').val()==''){
                 layer.msg('请输入您的自定义标签');
                 return false;
-              }else if ($('#recommend-input').val() == '专业解析' || $('#recommend-input').val()=='申请规划' || $('#recommend-input').val() =='留学费用'||$('#recommend-input').val()=='留学条件'||$('#recommend-input').val()=='大学排名'||$('#recommend-input').val()=='行前指导'||$('#recommend-input').val()=='就业指导'||$('#recommend-input').val()=='签证指导'||$('#recommend-input').val()=='留学案例'){
-                layer.msg('您输入的自定义标签不能与推荐标签相同');
-                return false;
               }else{
-                custom_tags =$('#recommend-input').val();
+                  var custom_tags_flag = '';
+                  for(var i =0;i<taglist.length;i++){
+                      if($.trim($('#recommend-input').val())==taglist[i].val){
+                          custom_tags_flag =false;
+                          break;
+                      }else{
+                          custom_tags_flag = true;
+                      }
+                  }
+                  if(custom_tags_flag){
+                      custom_tags =$.trim($('#recommend-input').val());
+                  }else{
+                      layer.msg('您输入的自定义标签不能与推荐标签相同');
+                      return false;
+                  }
               }
             }
           }
         }
-        
         if($("#rel-case-title").val()==''){
           // 判断title
           $("#rel-case-title").focus();
@@ -562,7 +583,7 @@
                 tagStr+=$('#recommend-input').val()+',';
               }
             });
-            if($('.recommend-sel').eq(8).attr('checked')){
+            if($('#recommend-sel-case').attr('checked')){
               artType = 1;
             }else{
               artType = 2;
@@ -572,16 +593,27 @@
               return false;
             }
             newTagStr =tagStr.substring(0,tagStr.length-1);
-            if($('.recommend-sel').eq(9).attr('checked')){
+            if($('#recommend-sel-custom').attr('checked')){
               //选中自定义标签
               if($('#recommend-input').val()==''){
                 layer.msg('请输入您的自定义标签');
                 return false;
-              }else if ($('#recommend-input').val() == '专业解析' || $('#recommend-input').val()=='申请规划' || $('#recommend-input').val() =='留学费用'||$('#recommend-input').val()=='留学条件'||$('#recommend-input').val()=='大学排名'||$('#recommend-input').val()=='行前指导'||$('#recommend-input').val()=='就业指导'||$('#recommend-input').val()=='签证指导'||$('#recommend-input').val()=='留学案例'){
-                layer.msg('您输入的自定义标签不能与推荐标签相同');
-                return false;
               }else{
-                custom_tags =$('#recommend-input').val();
+                  var custom_tags_flag = '';
+                  for(var i =0;i<taglist.length;i++){
+                      if($.trim($('#recommend-input').val())==taglist[i].val){
+                          custom_tags_flag =false;
+                          break;
+                      }else{
+                          custom_tags_flag = true;
+                      }
+                  }
+                  if(custom_tags_flag){
+                      custom_tags =$.trim($('#recommend-input').val());
+                  }else{
+                      layer.msg('您输入的自定义标签不能与推荐标签相同');
+                      return false;
+                  }
               }
             }
           }
@@ -596,7 +628,6 @@
           $("#art_abs").focus();
           return false;
         }
-
         if(editor.txt.text()== ''){
           //判断正文
           layer.msg("请输入正文内容");
