--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -33,10 +33,7 @@
 .lx-hovertarg li{ display: inline-block; margin-right: 14px; *float: left}
 .lx-hovertarg li a{font-size: 12px;color: #999;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
-.lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {
-	display: inline-block;height: 12px;width: 12px;
-	background: url(../assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;
-}
+.lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {display: inline-block;height: 12px;width: 12px;background: url(../assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;}
 .lx-hovertarg .slide-toggle-icon{background: url(../assets/img/icon_toggle.png) no-repeat;}
 .slide-menu{ position: absolute; width: 795px; min-height: 43px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 5;padding-bottom: 12px;display:none;}
 .slide-menu li{ margin-left: 25px; margin-right: 25px;margin-top: 12px;}
