搜索结果页，切换城市抹掉page 公共头部搜索类型三角去掉  审核人：海亮

--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -12,7 +12,9 @@
         <div class="nav-right">
             <div class="new-searchs new-home-search">
                 <div class="search-type-box">
-                    <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
+                    <div class="search-type"><span class="search-type-text" id="searchType">留学</span>
+                        <!--<i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i>-->
+                    </div>
 <!--                    <ul class="search-type-ul">
                         <li>留学</li>
                         &lt;!&ndash;<li>移民</li>&ndash;&gt;
