--- a/views/login/register.html
+++ b/views/login/register.html
@@ -305,7 +305,7 @@
             </div>
         <div class="fen" style="margin-top: 10px;">
           <h4 style="line-height: 37px;">第三方快速登录：</h4>
-          <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
+          <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px;width: 140px;">
             <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="{{url}}"/>
 
             <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" style="float: left;">
