--- a/views/login/register.html
+++ b/views/login/register.html
@@ -524,6 +524,31 @@
     });
   }
 
+  //普通用户退出
+function outlogin () {
+  var login_info = JSON.parse(cookie('login_ss'));
+  var h = window.location.href;
+    // console.log('h', h);
+    var hh = h.split("/");
+    // console.log('hh[1]', hh[3]);
+    var hhh = h.split("?");
+    // console.log('hhh', hhh[1])
+    $.ajax({
+      url: '/login_out',
+      type: 'GET',
+      dataType:'jsonp',
+      jsonpCallback:'cb',
+      success:function(msg){
+        if (msg == '0') {
+          window.location.reload();
+        }
+      },
+      error:function(XMLHttpRequest, textStatus, errorThrown){
+        console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
+      }
+    })
+  }
+
   function loginS () {
     var url = $(this).attr('data-url')
     console.log('url',url);
