--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -268,6 +268,7 @@
     color: #666;
     background: #fff;
     border: 1px #f3f3f3 solid;
+    line-height: 340px;
   }
   .tou_but{
     width: 310px;
