修改顾问主页 审核人：海亮

--- a/views/center_main.html
+++ b/views/center_main.html
@@ -268,15 +268,16 @@
             console.log('1111')
             $('#zhezhaoy').show();
             $('body').css('overflow','hidden');
-            // var sUserAgent = navigator.userAgent.toLowerCase();
-            // if(sUserAgent .match(/ipad/i) == "ipad"){
-            //     var h = document.body.offsetHeight
-            // } else {
-                var h = document.documentElement.clientHeight || document.body.clientHeight;
-            // }
-            
-            h = h*0.7
+            var h = document.documentElement.clientHeight || document.body.clientHeight;
+            var sUserAgent = navigator.userAgent.toLowerCase();
+            if(sUserAgent .match(/ipad/i) == "ipad"){
+                console.log('ipad')
+                h = h*0.85
+            } else {
+                h = h*0.7
+            }
             // alert(h)
+            console.log('h',h)
             var $scrolltop = $('#yhrs_1').offset().top;
             $('html,body').animate({//$('html,body')兼容问题body属于chrome
               scrollTop:$scrolltop-h
