修改登录记录密码

--- a/views/login/login.html
+++ b/views/login/login.html
@@ -93,12 +93,12 @@
         </div>
         <form class="m-t" role="form" style="margin-top: 20px;">
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
-            <input type="text" style="border-radius: inherit;" class="form-control" placeholder="请输入手机号/员工号" id="newEmail"/>
+            <input type="text" style="border-radius: inherit;" class="form-control" placeholder="请输入手机号/员工号" id="newEmail" autocomplete="off"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
             <span class="login_error" id="login_e_phone" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone">请输入手机号</em></span>
           </div>
           <div class="form-group inputtext_isr" style="position: relative;height: 28px;margin-top: 20px">
-            <input type="password" style="border-radius: inherit;" class="form-control" placeholder="密码" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
+            <input type="password" style="border-radius: inherit;" class="form-control" placeholder="密码" required="" id="password" autocomplete="off">
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 13px" class="iconfont">&#xe606;</i>
             <span class="login_error" id="login_e_pass" style="display: none;"><i class="login_x"></i><em id="login_error_text_pass">密码不正确，请输入8-16位数字或字母</em></span>
           </div>
