--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -253,13 +253,13 @@
           
               <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-bottom: 20px">
 
-                <input type="text" class="form-control" placeholder="请输入手机号" style="border-radius: inherit;height: 30px;padding-left: 90px;" id="newEmail" data-errmsg="手机号不正确" />
+                <input type="text" class="form-control" placeholder="请输入手机号" style="border-radius: inherit;height: 30px;padding-left: 90px;" id="newEmail" autocomplete="off"/>
                 <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
                 <i class="phone_q">+86</i>
                 <span class="login_error" id="login_e_phone_u" style="display: none"><i class="login_x"></i><em id="login_error_text_phone_u">请输入手机号</em></span>
               </div>
               <div class="form-group clearfix" style="height: 28px;margin-top: 20px;position: relative;margin-bottom: 0px;">
-                <input placeholder="填写图形验证码" type="text" id="tupian_bin" class="form-control l_u_com_yan" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+                <input placeholder="填写图形验证码" type="text" id="tupian_bin" class="form-control l_u_com_yan" autocomplete="off" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
                 <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
                 <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;">
                   <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -268,7 +268,7 @@
                 </div>
               </div>
               <div class="form-group clearfix" style="margin-top: 20px;position: relative;height: 28px;">
-                <input  type="text" id="verify_forget" class="form-control l_u_com_yan" placeholder="请输入手机验证码" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+                <input  type="text" id="verify_forget" class="form-control l_u_com_yan" placeholder="请输入手机验证码" autocomplete="off" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
                 <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
                 <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;float: right;">
                   <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -276,12 +276,12 @@
                 </div>
               </div>
               <div class="form-group inputtext_isr clearfix" style="margin-top: 20px;position: relative;height: 28px;">
-                <input type="password" class="form-control" style="border-radius: inherit;height: 30px;" placeholder="请输入8-16位数字+字母组成" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
+                <input type="password" class="form-control" autocomplete="off" style="border-radius: inherit;height: 30px;" placeholder="请输入8-16位数字+字母组成" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
                 <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
                 <span class="login_error" id="login_e_password_u" style="display: none"><i class="login_x"></i><em id="login_error_text_password_u">密码不正确，请输入8-16位数字或字母</em></span>
               </div>
               <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-top: 20px">
-                <input type="password" class="form-control" style="border-radius: inherit;height: 30px;" placeholder="请输入确认密码" id="qie_password" data-errmsg="确认密码不正确，请输入8-16位数字或字母">
+                <input type="password" class="form-control" autocomplete="off" style="border-radius: inherit;height: 30px;" placeholder="请输入确认密码" id="qie_password" data-errmsg="确认密码不正确，请输入8-16位数字或字母">
                 <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
                 <span class="login_error" id="login_e_que_password_u" style="display: none"><i class="login_x"></i><em id="login_error_text_que_password_u">确认密码不正确，请输入8-16位数字或字母</em></span>
               </div>
