修改登录记住密码

--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -86,7 +86,7 @@
       <div class="register_nei_title"><em>绑定手机号</em><i>您已经成功关联{{oauth_data.title}}账号，用户名，请输入手机号完成<a target="_blank"  target="_blank"  href="/loginUser">绑定</a></i></div>
 
       <div class="register_nei_content">
-        <form class="m-t register_nei_form" role="form" style="margin-top: 100px">
+        <form class="m-t register_nei_form" role="form" autocomplete="off" style="margin-top: 100px">
           <div class="form-group clearfix" style="position: relative;height: 28px">
             <div class="title"><span>*&nbsp;</span>手&nbsp;机&nbsp;号&nbsp;：</div>
             <input type="text" class="form-control" autocomplete="off" id="newEmail" required />
