--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -94,7 +94,7 @@
       <div class="register_nei_title">忘记密码<i>已经注册，现在 <a target="_blank"  href="{{helper.urlgen('login')}}">登录</a></i></div>
 
       <div class="register_nei_content">
-        <form class="m-t register_nei_form" role="form">
+        <form class="m-t register_nei_form" role="form" autocomplete="off">
           <div class="form-group clearfix" style="position: relative;height: 28px;margin-bottom: 20px">
             <div class="title"><span>*&nbsp;</span>手&nbsp;机&nbsp;号&nbsp;：</div>
             <input type="text" class="form-control" autocomplete="off" id="newEmail" required />
