--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -249,7 +249,7 @@
           
         <div class="login_form">     
         <h3 class="login_nei_title_new" style="font-weight: 400">忘记密码</h3>
-        <form class="form-group m-t" role="form" style="margin-top: 20px;">
+        <form class="form-group m-t" role="form" style="margin-top: 20px;" autocomplete="off">
           
               <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-bottom: 20px">
 
