--- a/views/login/login.html
+++ b/views/login/login.html
@@ -91,7 +91,7 @@
             <input class="checked" type="radio" name="payMethod" value="1" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu"><span><i></i></span>留学顾问</label> 
             <input class="" type="radio" name="payMethod" value="2" id="yi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="yi"><span><i></i></span>移民顾问</label>
         </div>
-        <form class="m-t" role="form" style="margin-top: 20px;">
+        <form class="m-t" role="form" style="margin-top: 20px;" autocomplete="off">
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
             <input type="text" style="border-radius: inherit;" class="form-control" placeholder="请输入手机号/员工号" id="newEmail" autocomplete="off"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
