--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -170,7 +170,7 @@
         </div>-->#}
         <div class="login_form">
 
-            <form class="form-group m-t form_password" role="form" style="margin-top: 20px;">
+            <form class="form-group m-t form_password" autocomplete="off" role="form" style="margin-top: 20px;">
                 <div class="form-group inputtext_isr" style="position: relative;height: 28px">
                   <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" class="form-control" placeholder="请输入手机号" id="newEmail_pass" required autocomplete="off"/>
                   <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
@@ -192,7 +192,7 @@
             </form>
               
 
-        <form class="form-group m-t form_code" role="form" style="margin-top: 20px;display: none">
+        <form class="form-group m-t form_code" autocomplete="off" role="form" style="margin-top: 20px;display: none">
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
             <input type="text" style="border-radius: inherit;height: 30px;" class="form-control" placeholder="请输入手机号" id="newEmail" required autocomplete="off" data-errmsg="手机号不正确"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
