--- a/views/login/register.html
+++ b/views/login/register.html
@@ -256,7 +256,7 @@
           
         <div class="login_form">     
         <h3 class="login_nei_title_new" style="font-weight: 400">快速注册</h3>
-        <form class="form-group m-t" role="form" style="margin-top: 20px;">
+        <form class="form-group m-t" autocomplete="off" role="form" style="margin-top: 20px;">
           
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px">
             
