修改快速登录

--- a/views/login/register.html
+++ b/views/login/register.html
@@ -196,6 +196,12 @@
         <h3 class="login_nei_title_new" style="font-weight: 400">快速注册</h3>
         <form class="form-group m-t" autocomplete="off" role="form" style="margin-top: 20px;">
           
+          <!-- 额外增加的内容 -->
+          <form style="display:none">
+            <input type="password" style="display: none"/>
+          </form>
+          <input type="password" style="width:0;height:0;float:left;visibility:hidden;display: none"/>
+          <!-- 额外增加的内容 end -->
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px">
             
             <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" autocomplete="off" value="" class="form-control" placeholder="请输入手机号" id="newEmail"/>
